# mini_sp

./: .gitignore  Cargo.toml  graph.dot  gripper_comp_g2_instances.md  gripper_winner_all_instances.md  output.ps
mini_sp_examples/: Cargo.toml
mini_sp_examples/examples/: gripper_comp.rs  gripper_comp_g1.rs  gripper_comp_g2.rs  gripper_comp_g3.rs  gripper_comp_new.rs  gripper_inc.rs  gripper_orig_comp.rs  gripper_orig_inc.rs  movie_comp_g1.rs  movie_inc.rs  plot_gripper_results.rs  prob01_comp.rs  prob01_inc.rs  sticks_inc.rs
mini_sp_examples/results/: comp_1_balls_combs_no_output.md  comp_1_balls_combs_with_output.md  comp_2_balls_combs_no_output.md  comp_2_balls_combs_with_output.md  comp_3_balls_combs_no_output.md  comp_3_balls_combs_with_output.md  comp_4_balls_combs_no_output.md  comp_4_balls_combs_with_output.md  comp_5_balls_combs_no_output.md  comp_5_balls_combs_with_output.md  inc_comp_6_balls.md  inc_comp_6_balls_final.md  inc_comp_7_balls.md
mini_sp_examples/src/: gripper.rs  gripper_orig.rs  lib.rs  movie.rs  sticks.rs
mini_sp_smt/: Cargo.toml
mini_sp_smt/benches/: bench1.rs
mini_sp_smt/src/: lib.rs  z3config.rs  z3context.rs  z3logics.rs  z3ltlf.rs  z3operations.rs  z3optimizer.rs  z3planning.rs  z3planning2.rs  z3relations.rs  z3solver.rs  z3utils.rs  z3values.rs  z3variables.rs
mini_sp_smt/tests/: config_int_tests.rs  context_int_tests.rs  logics_int_tests.rs  operations_int_tests.rs  optimizer_int_tests.rs  relations_int_tests.rs  solver_int_tests.rs  sorts_int_tests.rs  values_int_tests.rs  variables_int_tests.rs
mini_sp_tools/: Cargo.toml
(+19 files in other folders)
