[package]
name = "mini_sp_examples"
version = "0.1.0"
authors = ["endre90 <endre90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mini_sp_tools = { path = "../mini_sp_tools" }

[dev-dependencies]
serial_test = "0.4.0"