[package]
name = "mini_sp_smt"
version = "0.1.0"
authors = ["endre90 <endree@chalmers.se>"]
edition = "2018"

[dependencies]
env_logger = "0.6.2"
log = "0.4.8"
z3-sys = { git = "https://github.com/endre90/z3_sys_v2" }
itertools = "0.8.1"
lazy_static = "1.4.0"
crossbeam = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serial_test = "0.4.0"